--- a/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
+++ b/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
@@ -79,7 +79,7 @@
           <div class="col-sm-9">
             <toggle-switch id="dynamicOriginDNSnameLookups" is-disabled="_loading" ng-model="item.dynamic" on-label="On" off-label="Off">
             </toggle-switch>
-            <label for="dynamic" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
+            <label for="dynamic" class="text-info" popover-trigger="mouseenter" uib-popover="Enables/disables dynamic DNS lookups (respecting of DNS TTL) of origin host DNS names">
               <i class="fa fa-question-circle"></i>
               <div class="error-messages" ng-messages="customVclBackendForm.backendVcl.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
