--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -58,7 +58,7 @@
                 <label for="domainName" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain Name</label>
                 <div class="col-sm-9">
                   <input type="text" class="form-control inline-block" disabled autofocus ng-model="modelInfo.domain_name" id="domain_name" name="domainName" placeholder="Domain Name">
-                  <label for="domainName" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="domainName" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The is the primary domain name associated with the configuration. The name cannot be changed. You can specify additional domain names (aliases) in fields 'Non-Wildcard Domain Aliases' and 'Wildcard Domain Alias' below.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
@@ -67,7 +67,7 @@
                 <label for="cname" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain CNAME</label>
                 <div class="col-sm-9">
                   <input type="text" class="form-control inline-block" disabled ng-model="modelInfo.cname" id="cname" name="cname" placeholder="Domain CNAME">
-                  <label for="cname" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="cname" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The DNS name is managed by the CDN and should be used by the customer to point to the CDN the primary domain name and domain aliases.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                   <button class="btn btn-primary btn-copy--cname" clipboard text="modelInfo.cname" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;" uib-tooltip="Click to copy the CNAME to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
@@ -143,7 +143,7 @@
                   <label class="radio-inline">
                     <input id="httpOnly" type="radio" ng-disabled="_loading" ng-model="model.origin_secure_protocol" value="http_only">HTTP Only
                   </label>
-                  <label for="origin_secure_protocol" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="origin_secure_protocol" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Ths option controls whether SSL/TLS protection will be applied to origin requests. Default option 'Use End User Protocol' will instruct the CDN to use for origin communication the same security protocol used by end user (if end user sends a plain unprotected HTTP request the origin call will be also in plain HTTP; if end user sends HTTPS request the origin call will be also in HTTPS). Option 'HTTPS Only' forces all origin requests to be make using HTTPS protocol. Option 'HTTP Only' forces the CDN to use plain HTTP even if end user requests are encrypted.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
@@ -205,7 +205,7 @@
                 <div class="col-md-9">
                   <toggle-switch id="lastMileQUICprotocol" is-disabled="_loading" ng-model="model.rev_component_bp.enable_quic" on-label="On" off-label="Off">
                   </toggle-switch>
-                  <label for="enable_quic" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="enable_quic" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This switch controls whether QUIC-enabled browsers (like Google's Chrome) will be allowed to use for data transfer modern QUIC protocol instead of HTTP2. QUIC protocol provides significant network performance benefits.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
@@ -218,7 +218,7 @@
                 <div class="col-md-9">
                   <toggle-switch id="blockAllWebCrawlers" is-disabled="_loading" ng-model="model.rev_component_bp.block_crawlers" on-label="On" off-label="Off">
                   </toggle-switch>
-                  <label for="block_crawlers" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="block_crawlers" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the switch to force the CDN to override the origin-provided /robots.txt file with a file disabling all web crawlers to access the website. This feature might be useful if you board a website on the platform but use a different domain name - this will prevent search engines to catalog the same content under different domain names.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
@@ -231,7 +231,7 @@
                 <div class="col-md-9">
                   <toggle-switch id="runDataCollection" is-disabled="_loading" ng-model="model.rev_component_co.enable_rum" on-label="On" off-label="Off">
                   </toggle-switch>
-                  <label for="enable_rum" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="enable_rum" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the switch the enable the injection of RUM data collection JavaScript into served HTML pages">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
@@ -242,7 +242,7 @@
                   <div class="col-sm-12 form-group">
                     <textarea id="comment" name="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control inline-block" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
                     </textarea>
-                    <label for="comment" class="text-info" popover-trigger="mouseenter" uib-popover="Comment">
+                    <label for="comment" class="text-info" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the web domain (300 characters max)">
                       <i class="fa fa-question-circle"></i>
                     </label>
                   </div>
@@ -259,7 +259,7 @@
                 </label>
                 <div class="col-md-9">
                   <input id="blueTriangleTechKey" type="text" class="form-control inline-block" ng-disabled="_loading" name="bttKey" ng-model="model.btt_key" placeholder="BTT API key for the domain" ng-pattern="/^[0-9a-fA-F]{32}$/">
-                  <label for="bttKey" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="bttKey" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="If the domain is also provisioned in Blue Triangle Technologies' platform it is possible to specify here the domain's BTT ID - this will allow you to see the domain's business reports in RevAPM's Dashboard section">
                     <i class="fa fa-question-circle"></i>
                   </label>
                   <div class="error-messages" ng-messages="editForm.bttKey.$error" role="alert" ng-messages-multiple>
@@ -352,7 +352,7 @@
                 <div class="col-md-9">
                   <toggle-switch id="edgeCaching" is-disabled="_loading" ng-model="model.rev_component_bp.enable_cache" on-label="On" off-label="Off">
                   </toggle-switch>
-                  <label for="enableb_cache" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="enableb_cache" class="text-info" popover-trigger="mouseenter" uib-popover="This switch controls whether edge caching functionality will be enabled for the domain. It is not enough just to enable the switch - you also need to specify proper caching rules (the default caching rule will properly handle the majority of use-cases). Edge caching is also required to support ESI feature.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                 </div>
@@ -367,7 +367,7 @@
                       {{bypass_locations}}
                     </ui-select-choices>
                   </ui-select>
-                  <label for="cache_bypass_locations" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="cache_bypass_locations" class="text-info" popover-trigger="mouseenter" uib-popover="Specify here global URLs/locations which should not have any of the edge caching rules applied to them. Please note that ESI feature will be not available for the locations.">
                     <i class="fa fa-question-circle"></i>
                   </label>
                   <div class="error-messages" ng-messages="editForm.cacheBypassLocations.$error" role="alert" ng-messages-multiple>
@@ -473,7 +473,7 @@
                             <label>
 
                               <input id="predefinedSSLconfigurationProfile" type="radio" class="inline-block" name="isCustomSSL_conf_profile" ng-model="isCustomSSL_conf_profile" ng-value="false"> Predefined SSL Configuration Profile
-                              <label for="isCustomSSL_conf_profile" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
+                              <label for="isCustomSSL_conf_profile" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="Select the radio-button to use one of the pre-defined SSL configuration profiles (recommended)">
                                 <i class="fa fa-question-circle"></i>
                               </label>
                             </label>
@@ -492,7 +492,7 @@
                           <div class="checkbox">
                             <label>
                               <input id="customSSLconfigurationProfile" type="radio" ng-model="isCustomSSL_conf_profile" name="isCustomSSL_conf_profile" ng-value="true"> Custom SSL Configuration Profile
-                              <label for="isCustomSSL_conf_profile" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
+                              <label for="isCustomSSL_conf_profile" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="Select the option to define your own SSL configuration options">
                                 <i class="fa fa-question-circle"></i>
                               </label>
                             </label>
@@ -532,7 +532,7 @@
                       <div class="checkbox">
                         <label popover-trigger="mouseenter">
                           <input type="checkbox" ng-disabled="!isCustomSSL_conf_profile" ng-model="model.ssl_prefer_server_ciphers" id="ssl_prefer_server_ciphers" placeholder="Prefer Server-Side Ciphers"><strong> Prefer Server-Side Ciphers</strong></label>
-                        <label for="ssl_prefer_server_ciphers" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
+                        <label for="ssl_prefer_server_ciphers" class="text-info" popover-trigger="mouseenter" uib-popover="Specifies that server ciphers should be preferred over client ciphers">
                           <i class="fa fa-question-circle"></i>
                         </label>
                       </div>
