--- a/code/dev/parts/ssl_certs/edit.html
+++ b/code/dev/parts/ssl_certs/edit.html
@@ -117,7 +117,7 @@
               <div class="col-sm-12 form-group">
                 <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control inline-block" name="comment" ng-model="model.comment" ng-disabled="_loading" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-maxlength="300">
                 </textarea>
-                <label for="comment" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the app (300 characters max)">
+                <label for="comment" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the SSL certificate (300 characters max)">
                   <i class="fa fa-question-circle"></i>
                 </label>
               </div>
