--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -155,7 +155,7 @@ specify '11.11.11.11' in origin server name field above and 'www.example.com' in
                 <div class="col-sm-12 form-group">
                 <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control inline-block" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading" style="margin-right: 4px;">
                 </textarea>
-                <label for="comment" class=text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Comment">
+                <label for="comment" class=text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the web domain (300 characters max)">
                     <i class="fa fa-question-circle"></i>
                 </label>
               </div>
