Update directive "domail-select"

--- a/code/dev/parts/domains/domain-select/domain-select.html
+++ b/code/dev/parts/domains/domain-select/domain-select.html
@@ -1,8 +1,8 @@
-<ui-select ng-model="ngDomain"
+<ui-select class="domain-select"
+           ng-model="ngDomain"
            theme="select2" ng-animate-disabled
            ng-disabled="_loading"
-           on-select="onModelSelect($model)"
-           style="min-width: 300px;" >
+           on-select="onModelSelect($model)">
   <ui-select-match placeholder="Select Domain">{{$select.selected.domain_name}}</ui-select-match>
   <ui-select-choices repeat="item in domains | filter: {domain_name: $select.search}">
     <div ng-bind-html="item.domain_name|highlight: $select.search"></div>
