--- a/code/dev/parts/companies/new.html
+++ b/code/dev/parts/companies/new.html
@@ -30,7 +30,7 @@
             <div class="col-sm-10">
               <input type="text"
                      autofocus
-                     class="form-control"
+                     class="form-control inline-block"
                      ng-disabled="_loading"
                      ng-model="model.companyName"
                      name="companyName"
@@ -38,6 +38,9 @@
                      id="name"
                      ng-pattern="NO_SPECIAL_CHARS"
                      placeholder="Company Name" required>
+              <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Company Name TODO REVIEW TEXT">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="createForm.companyName.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -46,8 +49,13 @@
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" placeholder="Comment (max 300 symbol)" ng-maxlength="300" class="form-control" id="comment" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
-              </textarea>
+              <div class="col-sm-12 form-group">
+                <textarea id="comment" placeholder="Comment (max 300 symbol)" ng-maxlength="300" class="form-control inline-block" id="comment" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
+                </textarea>
+                <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Comment TODO REVIEW TEXT">
+                  <i class="fa fa-question-circle"></i>
+                </label>
+              </div>
               <div class="error-messages" ng-messages="createForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
