--- a/code/dev/parts/reports/top-reports.html
+++ b/code/dev/parts/reports/top-reports.html
@@ -16,6 +16,7 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <div domain-select
+                         id="domain"
                          ng-model="domain"
                          on-select="onDomainSelected()"
                          select-one="true"></div>
