--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -14,7 +14,7 @@
               <div class="pull-left">
                 <form class="form-inline">
                   <div class="form-group">
-                    <div domain-select ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
+                    <div domain-select id="domain" ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
                   </div>
                   <div class="form-group">
                     <time-note-display></time-note-display>
