Update nad add new UI test for Mobile Analytics (Apps Analytics)

--- a/code/dev/parts/reports/mobile-traffic.html
+++ b/code/dev/parts/reports/mobile-traffic.html
@@ -31,6 +31,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div mobile-rps-chart
+                   id="mobile-rps-chart"
                    ng-account="account"
                    ng-app="application.app_id"
                    fl-oses="oses"
@@ -46,6 +47,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div mobile-bw-chart
+                   id="mobile-bw-chart"
                    ng-account="account"
                    ng-app="application.app_id"
                    fl-oses="oses"
@@ -61,6 +63,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div mobile-http-codes-chart
+                   id="mobile-http-codes-chart"
                    ng-account="account"
                    ng-app="application.app_id"
                    fl-oses="oses"
