--- a/code/dev/parts/staging-environment/staging-environment.tpl.html
+++ b/code/dev/parts/staging-environment/staging-environment.tpl.html
@@ -37,6 +37,13 @@
                   <p> For example:</p>
                   <pre class="console"> curl -x {{$ctrl.stagingServers[0].server_ip}}:80 -v http://www.test-domain.com/</pre>
                 </li>
+                <li>
+                  <p>Using curl's '--resolve' option to redirect requests for a specific domain/port pair to a staging IP address.</p>
+                  <p> An example of HTTP request:</p>
+                  <pre class="console"> curl --resolve "www.test-domain.com:80:{{$ctrl.stagingServers[0].server_ip}}" -v http://www.test-domain.com/</pre>
+                  <p> An example of HTTPS request:</p>
+                  <pre class="console"> curl --resolve "www.test-domain.com:443:{{$ctrl.stagingServers[0].server_ip}}" -v https://www.test-domain.com/</pre>
+                </li>
               </ol>
               <p>After verifying that the new configuration is working as expected you are welcome to send the configuration to the global network (and make available for your end users) by using <strong>"Publish"</strong> button in domain/SSL configuration forms.</p>
           </div>
