Add id="domain" into directive domain-select

--- a/code/dev/parts/import-config/import-config.html
+++ b/code/dev/parts/import-config/import-config.html
@@ -39,7 +39,7 @@
             <hr>
             <div class="pull-left">
               <h5>Select Domain:</h5>
-              <div domain-select ng-model="domain" on-select="onDomainSelected()"></div>
+              <div domain-select id="domain" ng-model="domain" on-select="onDomainSelected()"></div>
             </div>
             <br>
             <br>
