Update  "Usage Report" page - add Billing Zones Details

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -208,6 +208,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/activity.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/2fa.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/keys.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/locations.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/log_shipping_jobs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_certs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_conf_profiles.factory.js"></script>
